# ee492-senior-project

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements-tracking.txt  run_demo.sh
app/: inference.py  plotting.py  presets.py  streamlit_app.py  warmup.py
configs/: paths.yaml  v1.yaml  v2.yaml  v3.yaml  v3_all_records.yaml  v4.yaml
data/: DatasetDescription.md  prepare_dataset.py  save_raw_data.py
demo/: README.md  requirements.txt  streamlit_app.py
docs/: MasterFilterJustification.md  PrefectUsage.md  V3AllRecordsResults.md  V3BaselineResults.md  V4EventActivitySummary.md
flows/: README.md  new_data_eval_flow.py  raw_data_etl_flow.py  serve_flows.py
scripts/: analyze_window_hop.py  build_clean_v4_dataset.py  check_environment.py  dataset_summary.py  error_analysis_v3.py  evaluate_raw_cough.py  evaluate_v3.py  evaluate_v3_activity.py  evaluate_v4.py  evaluate_v5_activity.py  find_label_review_candidates.py  inspect_v4_record.py  make_event_level_result_assets.py  make_final_report_assets.py  make_presentation_signal_figures.py  make_v4_report_assets.py  plot_record_spectrogram.py  predict_record.py  predict_v4.py  prepare_dataset.py  process_raw_data.py  run_final_report_results.py  sweep_event_boundaries_v3.py  train_classical_ml.py  train_raw_cough.py  train_v3.py  train_v4.py  train_v5_ast.py  validate_dataset.py  verify_dataset_manifest.py  verify_model_manifest.py
tests/: conftest.py  test_classical_ml.py  test_clean_v4_dataset.py  test_event_metrics.py  test_paths.py  test_raw_baselines.py  test_v3_pipeline.py  (+1 more)
(+60 files in other folders)
