[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cough-analysis"
version = "0.1.0"
description = "Multi-sensor cough detection and activity classification experiments"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
  "torch>=2.2",
  "torchaudio>=2.2",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "jupyter>=1,<2",
  "notebook>=7,<8",
]
tracking = [
  "mlflow>=2,<4",
  "dvc>=3,<4",
]
orchestration = [
  "prefect>=3,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
